@@ -13,6 +13,7 @@ Improvements::
 
 Bug Fixes::
 
+* adjust TrimBox to fit inside of BleedBox when using optimizer and compliance is PDF/X (#2203)
 * prevent content on title page from exceeding the bounds of a single page; restriction applies to `ink_title_page`
 
 == 2.0.2 (2022-05-22) - @mojavelinux
